--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-  width: 880px;
+  max-width: 880px;
   /* TB LR */
   margin: 0 auto;
 }
@@ -123,7 +123,9 @@ header a {
 }
 /* main content section */
   .main-content {
-	border-top: 1px solid black;
+    width:95%;
+    margin: 0 auto;
+	border-top: 2px solid black;
 	margin-top: 76px;
 	padding-top: 39px;
   }
@@ -135,8 +137,10 @@ header a {
 	width: 45%;
 	/* margin-right: 34px; */
   }
-  .main-content .middle-img {
-	margin-top: 45px;
+  .middle-img img{
+    margin: 0 auto;
+    margin-top: 37px;
+    width: 100%;
   }
   .main-content .bottom-content {
 	margin-top: 37px;
@@ -150,8 +154,10 @@ header a {
 /* contact section */
 
 .contact {
-	margin-top: 57px;
-	border-top: 1px solid black;
+    width:95%;
+    margin: 0 auto;
+	margin-top: 37px;
+	border-top: 2px solid black;
 	display: flex;
   }
   
@@ -165,6 +171,174 @@ footer {
 	text-align: center;
 	font-size: 14px;
   }
+
+  /* Tablet */
+@media(max-width: 800px) {
+      /* header */
+      header {
+          display: flex;
+          flex-direction: column-reverse;
+          align-items: center;
+          align-content: flex-start;
+      }
+      header nav{
+          display: flex;
+          width: 90%; 
+          align-self: center;
+      }
+      header nav a {
+          width: 16%;
+          text-align: center;
+        font-size: 14px;
+        color: gray;
+        text-decoration: none;
+      }
+      
+      header nav a:hover {
+        text-decoration: underline;
+      }
+      header img {
+          width: 100%;
+          flex-basis: 0;
+          align-self: center;
+          margin: 10% auto;
+      }
+      
+/* cta section */
+.cta {
+    flex-direction: column;
+    justify-content: center;
+	align-items: center;
+}
+.cta-text {
+	width:100%;
+}
+
+.cta img{
+    display:none;
+}
+
+
+/* main content section */
+.main-content {
+    margin-top: 37px;
+	padding-top: 37px;
+  }
+  .main-content .top-content {
+	display: flex;
+	justify-content: space-around;
+  }
+  .main-content .top-content .text-content {
+	width: 45%;
+	/* margin-right: 34px; */
+  }
+  .main-content .bottom-content {
+	margin-top: 37px;
+	display: flex;
+	justify-content: space-around;
+  }
+  .main-content .bottom-content .text-content {
+	  width:30%;
+  }
+
+
+} /* tablet closer */
+
+
+
+/* phone */
+@media(max-width: 500px) {
+header nav{
+	border-bottom: 1px solid grey;
+    width:100%;
+    flex-direction: column;
+}
+header nav a{
+	border-top: 1px solid grey;
+    width: 100%;
+    padding: 5%;
+}
+    
+
+.main-content {
+	border-top: 1px solid black;
+	padding-top: 0px;
+  }
+    .main-content .top-content {
+        flex-direction: column;
+    }
+    .main-content .top-content .text-content {
+        /* margin-top: 37px; */
+	    padding-top: 37px;
+        width: 100%;
+    }
+    .main-content .bottom-content {
+        margin-top: 0%;
+      flex-direction: column;
+    }
+    .main-content .bottom-content .text-content {
+	    padding-top: 37px;
+        width:100%;
+    }
+    .contact {
+        border-top: 1px solid black;
+    }
+      
+}/* phone closer */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   /* SERVICES */
   .services-services{
